# Flask-ML

./: ._tests  .gitignore  404.html  LICENSE  Makefile  README.md  Readme.md  client_example.py  deployment_instructions.md  flask_ml.py  index.html  io_tools.py  pyproject.toml  pyrightconfig.json  server.py  server_example.py  setup.py  simple_cli.py  simple_server.py  simple_server_info.md  sitemap.xml  test.py  test_basic_classification.py  test_basic_server.py
.github/workflows/: deploy.yml  python-package.yml
assets/css/: styles.9795b8db.css  styles.a9f2e9ac.css
assets/js/: 053a77a0.bcdece2f.js  14eb3368.2cec9d4f.js  14eb3368.b93a6fae.js  17896441.45ac1ac2.js  17896441.b4c5741c.js  1be78505.882ecdf2.js  1df93b7f.635cd377.js  1df93b7f.bce07b13.js  1f391b9e.84580794.js  1f391b9e.e6c3ada9.js  341.47ebe5fc.js  393be207.3084a807.js  393be207.5cd1300e.js  42.6f27c8b5.js  5e95c892.0299ccb9.js  5e9a06b3.115dd60a.js  6545d73e.2b857bd0.js  6545d73e.4088f9ed.js  6545d73e.a1317ee4.js  6545d73e.db06feef.js  666.451e76c8.js  720feac4.407c768f.js  720feac4.57282dd4.js  720feac4.60f5177e.js  720feac4.76a7f676.js  720feac4.828705c4.js  720feac4.ea8a8a8f.js  935f2afb.1ea25e5f.js  935f2afb.578f35b7.js  935f2afb.b38a7b8a.js  935f2afb.d81a8c16.js  972.30bfc45d.js  a7456010.36eb989b.js  a7bd4aaa.25a2310e.js  a94703ab.a290c3ab.js  aba21aa0.1e961259.js  abdfc009.52c4bf60.js  abdfc009.5ce69466.js  abdfc009.62af3a69.js  abdfc009.d3926dd3.js  (+25 more)
flask_ml/: MLClient.py  MLServer.py  __init__.py  dtypes.py  dtypes_config.py  dtypes_encode_decode.py  dtypes_extract_wrap.py  flask_ml.py  io_tools.py
flask_ml_client/: MLClient.py  README.md  body.txt  client_example.py  client_multi_test.py  requirements.txt  setup.py
flask_ml_client/flask_ml_client/: MLClient.py  __init__.py
flask_ml_client/flask_ml_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flask_ml_client/ml_client/: MLClient.py  __init__.py
flask_ml_server/: .gitignore  README.md  ml_models.py  requirements.txt  server_flask_ml.py  setup.py
flask_ml_server/flask_ml_server/: MLServer.py  __init__.py  constants.py  response.py
flask_ml_server/flask_ml_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flask_ml_server/ml_server/: MLServer.py  io_tools.py
markdown-page/: index.html
materials/category/guides/: index.html
materials/guides/cli/: index.html
materials/guides/examples/: index.html
materials/guides/getting-started/: index.html
materials/guides/metadata/: index.html
react-client/: README.md  package-lock.json  package.json  tsconfig.json
react-client/app/: layout.tsx  page.tsx
react-client/app/about/: page.tsx
react-client/app/test-tailwind/: page.tsx
react-client/components/: MLClient.tsx  MLForm.tsx  ResultDisplay.tsx
src/flask_ml/: test.py
src/flask_ml/flask_ml_cli/: MLCli.py  __init__.py  utils.py
src/flask_ml/flask_ml_client/: MLClient.py  __init__.py
src/flask_ml/flask_ml_server/: MLServer.py  __init__.py  _generated_models.py  constants.py  models.py  openapi.yaml  response.py  templates.py  utils.py
tests/: ._utils  conftest.py  constants.py  single_image_post.py  test_app_metadata.py  test_basic_classification.py  test_basic_server.py  test_basicpredict.py  test_classification.py  test_cli.py  test_ml_server_and_client.py  test_request_models.py  test_response_models.py  test_templating.py  test_torch_classification.py  test_torch_server.py  test_utils.py
tests/utils/: basic_server_helpers.py
tool-suite/audio-transcription/: README.md  app.yaml  cli.py  model.py  requirements.txt  server.py
tool-suite/audio_transcription_ollama/: README  ollama.ipynb
website/: docusaurus.config.js  package-lock.json  package.json
website/materials/guides/: _category_.json  cli.md  examples.md  getting-started.md  metadata.md
website/src/css/: custom.css
(+9 files in other folders)
