[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_ml"
version = "0.1.1"
authors = [
  { name="Prasanna Lakkur Subramanyam", email="psubramanyam@umass.edu" },
]
description = "A Flask extension for running machine learning code"
readme = "README.md"
requires-python = ">=3.3"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "Flask",
    "requests",
    "pydantic",
    "datamodel-code-generator"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "types-requests",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/UMass-Rescue/Flask-ML"

[tool.datamodel-codegen]
field-constraints = true
snake-case-field = true
strip-default-none = false
target-python-version = "3.7"
use-annotated = true
keep-model-order = true
capitalize-enum-members = true
